<resources>
    <string name="app_name">SuperMai</string>
    <string name="infosplash">Cargando datos de la aplicación</string>
    <string name="version">1.0.0</string>
    <string name="email">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="forgot">Olvidé mi contraseña</string>
    <string name="iniciar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="registro">Registro</string>
    <string name="prestador_de_servicio">Prestador de Servicio</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="descripcion">Descripcion</string>
    <string name="registroP">Prestador de Servicios</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="indicaciones1">Proporciona la Siguiente Información</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="cancelar">Cancelar</string>
    <string name="continuar">Continuar</string>
    <string name="datos_del_domicilio">Datos del Domicilio</string>
    <string name="calle">Calle</string>
    <string name="n_exterior">N. Exterior</string>
    <string name="n_interior">N. Interior</string>
    <string name="c_p">C.P.</string>
    <string name="colonia">Colonia</string>
    <string name="tel_fijo">Teléfono fijo</string>
    <string name="tel_celular">Teléfono Celular</string>
    <string name="pregunta1">¿Cuenta con local propio?</string>
    <string name="oficio_profesion">Datos del Oficio o Profesión</string>
    <string name="experiencia">Años de Experiencia</string>
    <string name="area">Area a la que pertenece</string>
    <string name="info_fotos">Toma Fotos Legibles de los Siguientes Documentos</string>
    <string name="acta_de_nacimiento">Acta de Nacimiento</string>
    <string name="certificado_de_estudios">Certificado de Estudios</string>
    <string name="ine_ife">INE / IFE</string>
    <string name="curp">CURP</string>
    <string name="curriculum_vitae">Curriculum Vitae</string>
    <string name="oficio_t">Oficio o Profesión</string>

    <string name="facebook_app_id">2236187309745903</string>
    <string name="siguiente">Siguiente</string>
    <string name="question">¿En qué estado vas a ofrecer tus servicios?</string>

    <!-- Run Time Permissions Msgs -->
    <string name="general_run_time_message">Para que tu Experiencia Dentro de la Aplicación sea Completa, Activa los Siguientes Permisos:</string>
    <string name="runtime_camera">Hacer uso de la Cámara (Necesario Para la Captura de Documentos).</string>
    <string name="runtime_sms">Leer tu Bandeja SMS (Requerido Para Obtener el Código de Confirmación).</string>
    <string name="runtime_storage">Guardar Información en el Dispositivo (Esencial Para el Registro de Documentos).</string>
    <string name="run_time_enable_permissions_btn_lbl">Habilitar Permisos</string>
    <string name="run_time_continue_anyway_btn_lbl">Continuar</string>

    <!-- error_view_activity_activity.xml -->
    <string name="txt_errorText">Ocurrió un Error, al Hacer la Consulta\nIntentelo mas Tarde.</string>
    <string name="not_permission">Lo Sentimos, no Puedes Usar Esta Aplicación sin Conceder Permiso.</string>

    <!-- Dialogs -->
    <string name="txt_title">AVISO</string>
    <string name="dialog_title_aviso">Aviso</string>
    <string name="dialog_text_next">Continuar</string>
    <string name="dialog_text_cancel">Cancelar</string>
    <string name="dialog_text_accept">Aceptar</string>
    <string name="dialog_text_send">Enviar</string>
    <string name="dialog_title_mail_confirmation">Confirma tu Correo</string>
    <string name="dialog_text_mail_confirmation">Te Hemos Enviado un Link Para\nConfirmar tu Correo.</string>
    <string name="dialog_title_pass">Restablecer Contraseña</string>
    <string name="dialog_text_pass">Te Hemos Enviado un Link Para\nRestablecer tu Contraseña.</string>
    <string name="dialog_text_resend_email">Te Hemos Enviado un Link Para\nRestablecer tu Contraseña.</string>
    <string name="dialog_text_change_mail">Ingresa tu Cuenta de Correo Electrónico</string>
    <string name="dialog_title_change_mail">Modificar Correo</string>
    <string name="dialog_title_resemd_mail">Reenviar Correo</string>
    <string name="dialog_title_contact">Contacto</string>
    <string name="dialog_hint_title">Ingresa Titulo</string>
    <string name="dialog_hint_message">Ingresa tu Mensaje</string>
    <string name="dialog_status_upload">Procesando\n%1$d de %2$d</string>
    <string name="dialog_status_title">REALIZANDO REGISTRO</string>
    <string name="dialog_status_success">Se han Guardado sus Documentos.</string>
    <string name="dialog_status_success_count">Completados %1$d de %2$d</string>
    <string name="dialog_status_failure">Ocurrió un Error al Cargar los Archivos.</string>
    <string name="menu_end_session">Cerrar Sesión</string>




</resources>
