<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/iv_loguito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/maichi"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp">


        <EditText
            android:id="@+id/ed_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorPrimary"
            android:ems="10"
            android:textSize="12sp"
            android:padding="8dp"
            android:background="@drawable/cuadro_texto"
            android:textColor="@color/colorPrimary"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ed_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/contraseña"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            android:padding="8dp"
            android:background="@drawable/cuadro_texto"
            android:textColor="@color/colorPrimary"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/forgot"
            android:textSize="10sp"
            android:textColor="@color/colorMedio"
            android:textAlignment="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_boton_principal"
            android:padding="8dp"
            android:text="Iniciar"
            android:textColor="@color/colorFondo"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>


</LinearLayout>